# wordle-gear-academy

./: .gitignore  README.md
.github/workflows/: ci.yml
session/: Cargo.toml
session/io/: Cargo.toml
session/io/src/: lib.rs
session/src/: lib.rs
session/tests/: basic.rs
session/wordle-state/: Cargo.toml
wordle/: Cargo.toml
wordle/io/: Cargo.toml
wordle/io/src/: lib.rs
wordle/src/: lib.rs
wordle/tests/: basic.rs
